# pylevate

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  package.json  pixi.toml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
js/: baselib.js  hmr-client.js  pylevate-ai-core.js  pylevate-ai-runtime.js  pylevate-chat-runtime.js  pylevate-chat.css  pylevate-events.js  pylevate-game-runtime.js  pylevate-md.js  pylevate-native-runtime.js  pylevate-runtime.js
playground/: index.html
pylevate/: __init__.py  __main__.py  _paths.py  ai.py  chat.py  cli.py  config.py  events.py  game.py  native.py  scaffold.py  server.py
pylevate/compiler/: css_scoper.py  esbuild.py  loop_hoister.py  native_bridge.py  pipeline.py  py2js.py  template_walker.py
pylevate/ide/: __init__.py  files.py  handler.py  llm_proxy.py  server.py
pylevate/ide/static/: index.html
pylevate/mobile/: capacitor.py
pylevate/runtime/: ai.py  chat.py  component.py  game.py  native.py  signals.py
pylevate/templates/agent/: index.html  main.py  package.json  tools.py
pylevate/templates/app/: index.html  main.py  pylevate.config.py
pylevate/templates/chat/: index.html  main.py  pylevate.config.py
pylevate/templates/dashboard/: index.html  main.py
pylevate/templates/dashboard/components/: nav.py
pylevate/templates/dashboard/pages/: home.py  settings.py  stats.py
pylevate/templates/dashboard/stores/: counter.py
pylevate/templates/game/: index.html  main.py  package.json  pylevate.config.py
pylevate/templates/hybrid/: game.py  index.html  main.py  pylevate.config.py
pylevate/templates/rag/: corpus.py  index.html  main.py
tests/compiler/: test_chat_ai.py  test_components.py  test_css_scoper.py  test_esbuild_alias.py  test_html_rewrite.py  test_loop_hoister.py  test_native_bridge.py  test_py2js.py  test_routing.py  test_stores.py  test_templates.py  test_warnings.py
tests/ide/: test_files.py  test_ide_routes.py  test_llm_proxy.py  test_scaffold.py
tests/integration/: test_js_core.py  test_pipeline_e2e.py
tests/js/: ai_core_smoke.mjs  ai_runtime_smoke.mjs  css-stub-loader.mjs  md_smoke.mjs  runtime_jsdom.mjs
