[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pylevate"
version = "0.1.0"
description = "Python-syntax full-stack framework compiling to Preact + Phaser"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Kevin Keller", email = "kellerkev@gmail.com" },
]
keywords = ["framework", "preact", "phaser", "python", "compiler", "web", "game", "mobile"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Compilers",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "typer>=0.9",
    "rich>=13",
    "watchdog>=3",
    "websockets>=12",
]

[project.scripts]
pylevate = "pylevate.cli:app"

[project.urls]
Repository = "https://github.com/pylevate/pylevate"

[tool.hatch.build.targets.wheel]
packages = ["pylevate"]

# Bundle the root-level js/ runtime assets (baselib + pylevate-*-runtime bundles,
# HMR client) into the installed package at pylevate/js so wheel/git installs can
# run `pylevate build`. framework_js_dir() resolves this path (packaged first,
# then the source-tree sibling for editable installs).
[tool.hatch.build.targets.wheel.force-include]
"js" = "pylevate/js"

[tool.pytest.ini_options]
testpaths = ["tests"]
